# compiler-design

./: .gitignore  .gitmodules  0001-napraw-testy-varqox.patch  Lattec.cabal  Makefile  README-oficjalne.md  README.md  cabal.project  notes.txt  ocena-frontend.txt  pack.sh  pb429141.tgz  single-test.sh  test-scope2.lat  test.lat  test.sh
Latte/: .gitignore  Latte.cf
lattests/bad/: daria-bad-main-type.lat  daria-void-comparison.lat  daria-while-no-return.lat
lattests/good/: daria-error.lat  daria-expr.lat
lib/: runtime.c
manual-tests/: method-param-passing-array.lat  method-param-passing-array.output  sfor-int-array.lat  sfor-string-array.lat  test-virtual.lat
mrjp-tests/: README.rst
mrjp-tests/gr5/: bfs.lat  lista2Kierunkowa.lat  mergeSort.lat
mrjp-tests/weird_bad/: daria-decl-in-if.lat
src/: BackendLLVM.hs  Main.hs  TypeChecker.hs
test-tmpfile/: driver.c  tester.sh
tests-pretty-exceptions/: daria-manual-duplicated-parameter-name.err  daria-manual-duplicated-parameter-name.lat  daria-manual-invalid-decl.err  daria-manual-invalid-decl.lat  daria-manual-no-return.err  daria-manual-relatives.err  daria-manual-relatives.lat  daria-manual-repeated-decl-printInt-2.err  daria-manual-repeated-decl-printInt-2.lat  daria-manual-repeated-decl-printInt.err  daria-manual-repeated-decl-printInt.lat  daria-manual-repeated-decl-readString-2.err  daria-manual-repeated-decl-readString-2.lat  daria-manual-repeated-decl-readString.err  daria-manual-repeated-decl-readString.lat
